Bug 205648 Support "context menu" key under gtk/gtk2 p=crispin@flowerday.cx r=blizzard sr=bryner